Restructuring. Added page-header and main-toolbar containers to the page template to prevent loading flicker.

--- a/inc/counter.css
+++ b/inc/counter.css
@@ -1,7 +1,11 @@
-/* counter.css  2021-08-16  usp */
+﻿/* counter.css  2021-08-21  usp */
 
-body { counter-reset : listing-counter figure-counter table-counter ; }
+body { counter-reset : listing-counter figure-counter table-counter }
 figcaption.listing:before { counter-increment : listing-counter; content : "Listing " counter(listing-counter) ": " ; }
 figcaption.figure:before { counter-increment : figure-counter; content : "Figure " counter(figure-counter) ": " ; }
 figcaption.table:before { counter-increment : table-counter; content : "Table " counter(table-counter) ": " ; }
 table > caption.autonum:before { counter-increment : table-counter ; content : "Table " counter(listing-counter) ": " ; }
+
+ol.instructions { list-style-type : none ; padding-left: 20px ; counter-reset : instruction-counter }
+ol.instructions.continue { counter-reset : none }
+ol.instructions li:before {  counter-increment : instruction-counter; content : counters(instruction-counter, ".") ". " ; }
